--- a/package.json
+++ b/package.json
@@ -8,20 +8,26 @@
     "start": "NODE_ENV=production bun src/http/server.ts",
     "test": "bun test",
     "generate": "drizzle-kit generate",
-    "migrate": "bun src/db/migrate.ts"
+    "migrate": "bun src/db/migrate.ts",
+    "seed": "bun src/db/seed.ts",
+    "studio": "drizzle-kit studio"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/bun": "latest",
     "drizzle-kit": "^0.31.4",
-    "pg": "^8.16.3"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
+    "eslint": "^9.31.0",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "pg": "^8.16.3",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "drizzle-orm": "^0.44.3",
+    "chalk": "^5.4.1",
+    "drizzle-orm": "0.43.0",
     "elysia": "^1.3.5",
-    "postgres": "^3.4.7"
+    "postgres": "^3.4.7",
+    "zod": "^4.0.5"
   }
 }
