--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@elysiajs/cookie": "^0.8.0",
+    "@elysiajs/jwt": "^1.3.2",
     "@faker-js/faker": "^9.9.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "chalk": "^5.4.1",
