--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@faker-js/faker": "^9.9.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "chalk": "^5.4.1",
+    "dayjs": "^1.11.13",
     "drizzle-orm": "0.43.0",
     "elysia": "^1.3.5",
     "postgres": "^3.4.7",
