--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bun": "latest",
+    "@types/nodemailer": "^6.4.17",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
     "eslint-plugin-drizzle": "^0.2.3",
@@ -30,6 +31,7 @@
     "dayjs": "^1.11.13",
     "drizzle-orm": "0.43.0",
     "elysia": "^1.3.5",
+    "nodemailer": "^7.0.5",
     "postgres": "^3.4.7",
     "zod": "^4.0.5"
   }
