--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chalk": "^5.4.1",
     "dayjs": "^1.11.13",
     "drizzle-orm": "0.43.0",
+    "drizzle-typebox": "^0.3.3",
     "elysia": "^1.3.5",
     "nodemailer": "^7.0.5",
     "postgres": "^3.4.7",
